encrypt/decrypt using ArrayBuffer instead of Buffer

--- a/react-native/tsconfig.json
+++ b/react-native/tsconfig.json
@@ -20,7 +20,7 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "resolveJsonModule": true,
-    "skipLibCheck": true,
+    "skipLibCheck": false,
     "strict": true,
     "target": "esnext",
     "verbatimModuleSyntax": true
